chores: middleware setup
